--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^4.0.0",
-        "axios": "^1.1.2",
+        "axios": "^1.4.0",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.5",
         "sass": "^1.56.1",
@@ -16,6 +16,8 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
-        "vue-router": "^4.2.4"
+        "vee-validate": "^4.10.7",
+        "vue-router": "^4.2.4",
+        "yup": "^1.2.0"
     }
 }
