--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "sweetalert2": "^11.3.10",
         "vee-validate": "^4.10.7",
         "vue-router": "^4.2.4",
+        "vue-toast-notification": "^3.1.1",
         "yup": "^1.2.0"
     }
 }
